force-app/main/default/objects/Solicitud_de_Compra__c/fields/Cantidad_de_Bultos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Bultos__c</fullName>
    <label>Cantidad de Bultos</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>