force-app/main/default/objects/Solicitud_de_Compra__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de Compra</relationshipLabel>
    <relationshipName>Solicitudes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>